# EGISZ-Proxy-Reports-Airflow

./: .dockerignore  .env  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  src.7z  up.ps1
.claude/: claude_ide_prompt_egisz_v3.md  settings.local.json
.github/workflows/: ci.yml
airflow/: Dockerfile
airflow/dags/: egisz_dimensions_dag.py  egisz_elt_dag.py  egisz_etl_dag.py  egisz_extract_dag.py  egisz_reconcile_dag.py  proxy_reports_etl_dag.py
db/: dwh_erase.sql  dwh_init.sql
db/parts/: 00_bootstrap.sql  10_tables.sql  20_functions_parsing.sql  30_error_rules.sql  40_functions_errors.sql  50_transform.sql  (+7 more)
deploy/: README.md
metabase/: Dockerfile  entrypoint.sh  provision.sh  setup-dashboards.sh  smoke-metabase-ui.sh  sync-models.sh  verify-cards.sh
metabase_dashboards/: 01_integration_egisz.json  01_operational.json  01_overview.json  02_errors_quality.json  02_service.json  03_documents_no_response.json  03_orgs.json  04_quality_and_errors.json  04_semd_types.json  05_executive.json  05_semd_archive.json  06_operational.json  06_semd_archive.json  07_client_service.json  08_client_bianalytic.json  09_general_statistics.json  09_weekly_dynamics.json  field_filter_defaults.yaml
metabase_models/: 01_documents.json  02_error_breakdown.json  03_no_response.json  03_semd_archive.json  04_network_errors.json  04_no_response.json  05_client_documents.json  06_network_errors.json
migrations/: 004_full_analytics.sql  2026_05_15_flat_error_types.sql  2026_05_16_fix_fio_leak.sql
scripts/: apply_dashboard_plan.py  apply_metabase_card_audit.py  apply_metabase_field_filters.py  apply_qb_cards.py  audit_metabase_dashboards.py  backfill_transactions_contour.sql  build_external_bundle.ps1  build_standalone_dags.py  clinic_volume_card.py  compact_dashboard_rows.py  ensure-databases.sh  export_dashboard.py  fix_number_formatting.py  layout_operational_tab.py  mb_api.py  patch_dashboard_scalars.py  reclassify_error_rules_2026_07.sql  unify_clinic_volume_card.py  verify_metabase_cards.py  verify_metabase_integration.py
tests/: conftest.py  test_dag_selfcontainment.py  test_dashboards.py  test_elt_dag.py  test_error_rules.py  test_extract.py  test_fb_client.py  test_pg_client.py  test_reconcile.py  test_standalone_dags.py
(+51 files in other folders)
