[project]
name = "egisz-elt"
version = "0.1.0"
description = "Firebird to PostgreSQL DWH ELT for EGISZ analytics with Airflow and Metabase."
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
authors = [{ name = "EGISZ" }]

dependencies = [
  "firebird-driver>=1.10.0,<2.0.0",
  "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
  "apache-airflow==2.11.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
