[project]
name = "egisz-elt"
version = "0.1.0"
description = "Firebird to PostgreSQL DWH ELT for EGISZ analytics with Airflow and Metabase."
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
authors = [{ name = "EGISZ" }]

dependencies = [
  "firebird-driver>=1.10.0,<2.0.0",
  "psycopg2-binary>=2.9.9",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "apache-airflow==3.2.2",
  "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

# Пакет не собирается: DAG-файлы самодостаточны (airflow/dags/*.py — канонический
# исходник); pyproject остаётся источником зависимостей для pip install -e .[dev],
# Docker-образа Airflow и requirements.txt внешнего бандла.
[tool.setuptools]
py-modules = []
